# cpp-lose-layer-architecture

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
presentation/: classdiagram  classdiagram.autosave  classdiagram~  presentation.odp
src/: main.cpp
src/ip/: api.hpp  controller.hpp
src/udp/: api.hpp  controller.cpp  controller.hpp
src/util/: util.hpp
